--- a/Atreverse/alternativas.html
+++ b/Atreverse/alternativas.html
@@ -190,7 +190,7 @@
             <p> Se opta por tratamiento ambulatorio o a través de las modalidades hospital de día o de noche, en pacientes que posean un sistema de apoyo que pueda brindar una contención suficiente y eficiente.</p>
             <p> La internación no se considera la primera opción y se decide en el caso de que la persona se encuentre en situación de riesgo y sin red de contención externa.
             </p>
-          <div class="col-md-12  nopadding img-fases"><img src="img/foto-actividades.jpg" alt=""></div>
+          <div class="col-md-12  nopadding img-fases"><img src="img/alternativas.jpg" alt=""></div>
         </div>
       </div>
     </div>
@@ -198,15 +198,7 @@
     <div class="copy-rights">
       <div class="container">
         <p>All Right Resreved 2015 , Resala Template</p>
-        <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">About us</a></li>
-          <li><a href="#">Services</a></li>
-          <li><a href="#">Causes</a></li>
-          <li><a href="#">Events</a></li>
-          <li><a href="#">Blog</a></li>
-          <li><a href="#">Contact us</a></li>
-        </ul>
+        
       </div>
     </div>
     <script src="js/jquery.min.js"></script>
