--- a/Atreverse/fases.html
+++ b/Atreverse/fases.html
@@ -186,7 +186,7 @@
                </p>
           
           <p>Consideramos que el tratamiento es un proceso. La admisión como consulta inicial, la evaluación, el diagnóstico, la intervención y el tratamiento en sí mismos son parte de un proceso que no está fragmentado en etapas sino que forma parte de un continuo seguimiento y atención, donde las fases transicionan de manera que se haga un correlato de unas a otras. Comprender esta noción de proceso es fundamental para poder tomar las decisiones adecuadas en cada momento del mismo.</p>
-          <div class="col-md-12  nopadding img-fases"><img src="img/foto-actividades.jpg" alt=""></div>
+          <div class="col-md-12  nopadding img-fases"><img src="img/fases.jpg" alt=""></div>
         </div>
       </div>
     </div>
@@ -194,15 +194,7 @@
     <div class="copy-rights">
       <div class="container">
         <p>All Right Resreved 2015 , Resala Template</p>
-        <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">About us</a></li>
-          <li><a href="#">Services</a></li>
-          <li><a href="#">Causes</a></li>
-          <li><a href="#">Events</a></li>
-          <li><a href="#">Blog</a></li>
-          <li><a href="#">Contact us</a></li>
-        </ul>
+        
       </div>
     </div>
     <script src="js/jquery.min.js"></script>
