--- a/Atreverse/index.html
+++ b/Atreverse/index.html
@@ -177,9 +177,7 @@
           <h1 class="wow fadeInUp">FUNDACIÓN ATREVERSE</h1>
           <p data-wow-delay="0.3s" class="wow fadeInUp">Nos dedicamos desde el año 1992  a rehabilitar, reeducar y reinsertar  social y laboralmente a personas con problemas de adicciones.</p>
           <ul class="buttons">
-            <li>
-              <button data-toggle="modal" href="about-us.html" class="button btn-primary btn-lg wow fadeInLeft">Sobre Nosotros</button>
-            </li>
+           
            
           </ul>
         </div>
@@ -196,7 +194,7 @@
               4- ALTA TERAPÉUTICA  <br> 
               <br>
           </p>
-          <button class="button btn-border-light btn-lg">LEER MAS</button>
+          <button class="button btn-border-light btn-lg" href="fases.html" >LEER MAS</button>
         </div>
       </div>
       <div class="col-md-4 nopadding teal-bg">
@@ -209,7 +207,7 @@
               4 - INTERNACIÓN <br>
               <br>
          </p>
-          <button class="button btn-border-light btn-lg">LEER MAS</button>
+          <button class="button btn-border-light btn-lg" href="alternativas.html">LEER MAS</button>
         </div>
       </div>
       <div class="col-md-4 nopadding red-bg">
@@ -223,7 +221,7 @@
             2-  FARMACOLOGICO <br>
             3- CONDUCTUAL         <br>              
           </p>
-          <button class="button btn-border-light btn-lg">LEER MAS</button>
+          <button class="button btn-border-light btn-lg" href="tratamiento.html">LEER MAS</button>
         </div>
       </div>
     </section>
@@ -231,7 +229,7 @@
       <div class="section-title">
         <h2>Fundación ATREVERSE  </h2>
         <div class="underlines"><span class="right"></span>
-          <div class="icon"><i class="fa fa-star"></i></div><span class="left"></span>
+          <div class="icon"></div><span class="left"></span>
         </div>
         <p class="description-text hidden-xs">Establecimiento Asistencial de deshabituación, desintoxicación, rehabilitación y reinserción de pacientes con problemas de adicciones. <br> Asistimos a Hombres mayores de 21 años en riesgo por problemas de adicciones</p>
       </div>
@@ -275,7 +273,7 @@
         <div class="section-title">
           <h2>Programas con empresas.</h2>
           <div class="underlines"><span class="right"></span>
-            <div class="icon"><i class="fa fa-star"></i></div><span class="left"></span>
+            <div class="icon"></div><span class="left"></span>
           </div>
           <p class="description-text">Trabajamos capacitando al personal jerárquico de empresas para que puedan identificar y enfrentar la problemática  de adicciones dentro del ámbito laboral, abordando  las diferentes etapas en las que se le puede hacer frente, es decir: prevención, capacitación, detección de la problemática, asistencia individual y familiar.</p>
           <p class="description-text">Nuestra premisa es brindar  a los trabajadores la posibilidad de recibir asistencia primaria acerca de su problemática, un posterior tratamiento -en diferentes modalidades según el caso específico-  y una posterior reinserción laboral y social, para así comenzar a gozar de la seguridad de un empleo y de las oportunidades de superación y ascenso profesional. </p>
@@ -292,8 +290,6 @@
       <ul class="social">
         <li><a href="#"> <i class="fa fa-facebook"></i></a></li>
         <li><a href="#"> <i class="fa fa-twitter"></i></a></li>
-        <li><a href="#"> <i class="fa fa-google-plus"></i></a></li>
-        <li><a href="#"> <i class="fa fa-tumblr"></i></a></li>
         <li><a href="#"> <i class="fa fa-linkedin"></i></a></li>
       </ul>
     </footer>
