--- a/Atreverse/programa-terapeutico.html
+++ b/Atreverse/programa-terapeutico.html
@@ -177,7 +177,7 @@
           <div class="section-title">
           <h2>PROGRAMA TERAPÉUTICO   </h2>
           <div class="underlines"><span class="right"></span>
-            <div class="icon"><i class="fa fa-star"></i></div><span class="left"></span>
+            <div class="icon"></div><span class="left"></span>
           </div>
           <p class="description-text hidden-xs">La terapéutica a aplicar tiene carácter socioeducativo: se muestran modelos basados en el respeto, la responsabilidad, el sentido de la autoridad y la solidaridad. Esto permite dejar de lado las conductas toxicas adquiridas y la marginalidad. </p>
         </div>
@@ -209,7 +209,7 @@
               <p>Se produce la reinserción familiar y social. <br> Es aquí donde el equipo terapéutico comienza a evaluar la posible alta del paciente.</p>
 
 
-          <div class="col-md-12  nopadding img-fases"><img src="img/foto-actividades.jpg" alt=""></div>
+          <div class="col-md-12  nopadding img-terapeutico"><img src="img/foto-programa-terapeutico.jpg" alt=""></div>
         </div>
       </div>
     </div>
@@ -217,15 +217,7 @@
     <div class="copy-rights">
       <div class="container">
         <p>All Right Resreved 2015 , Resala Template</p>
-        <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">About us</a></li>
-          <li><a href="#">Services</a></li>
-          <li><a href="#">Causes</a></li>
-          <li><a href="#">Events</a></li>
-          <li><a href="#">Blog</a></li>
-          <li><a href="#">Contact us</a></li>
-        </ul>
+        
       </div>
     </div>
     <script src="js/jquery.min.js"></script>
