--- a/Atreverse/quienes-somos.html
+++ b/Atreverse/quienes-somos.html
@@ -177,7 +177,7 @@
         <div class="section-title">
           <h2>Quienes Somos</h2>
           <div class="underlines"><span class="right"></span>
-            <div class="icon"><i class="fa fa-star"></i></div><span class="left"></span>
+            <div class="icon"></div><span class="left"></span>
           </div>
           <p class="description-text hidden-xs">Tenemos como filosofía primordial acompañar a la persona en recuperación a lograr el armado de su Proyecto de Vida, brindándole las herramientas   necesarias para su realización. </p>
         </div>
@@ -206,7 +206,7 @@
         <div class="section-title">
           <h2>Compromiso Social.</h2>
           <div class="underlines"><span class="right"></span>
-            <div class="icon"><i class="fa fa-star"></i></div><span class="left"></span>
+            <div class="icon"></div><span class="left"></span>
           </div>
           <p class="description-text">• ACTIVIDADES  realizadas con la comunidad <br><br>
             Cooperamos con Las Damas de Rosa del Municipio de Vicente López. <br><br>
@@ -221,7 +221,7 @@
       <div class="section-title">
         <h2>EQUIPO TERAPÉUTICO</h2>
         <div class="underlines"><span class="right"></span>
-          <div class="icon"><i class="fa fa-star"></i></div><span class="left"></span>
+          <div class="icon"></div><span class="left"></span>
         </div>
       </div>
       <div class="container">
@@ -327,15 +327,7 @@
     <div class="copy-rights">
       <div class="container">
         <p>All Right Resreved 2015 , Resala Template</p>
-        <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">About us</a></li>
-          <li><a href="#">Services</a></li>
-          <li><a href="#">Causes</a></li>
-          <li><a href="#">Events</a></li>
-          <li><a href="#">Blog</a></li>
-          <li><a href="#">Contact us</a></li>
-        </ul>
+       
       </div>
     </div>
     <script src="js/jquery.min.js"></script>
