--- a/Atreverse/tratamiento.html
+++ b/Atreverse/tratamiento.html
@@ -198,7 +198,7 @@
               <h4>3- CONDUCTUAL</h4>
               <p>En los tratamientos de rehabilitación para adictos es  fundamental la resocialización y la re-educación.  Los pacientes deben apropiarse de una estructura de normas y pautas  a  cumplir en el marco intra y extra institucionales, esto implica un proceso de desarrollo integral de la personalidad, que incluye el respeto y la consideración a los valores e integridad del ser humano.  Los cambios de actitudes y comportamiento son el resultado de este proceso, que responsabiliza a cada individuo por sus propios actos.  Esto permite ayudar a que los pacientes reconozcan, eviten y resistan las situaciones que implican un acto de transgresión a la norma Institucional ya sea en forma de ocultamiento, alianzas entre compañeros, manipulaciones y todas aquellas conductas y actitudes nocivas con las que se manejaba en su pasado inmerso en el consumo.</p>
 
-          <div class="col-md-12  nopadding img-fases"><img src="img/foto-actividades.jpg" alt=""></div>
+          <div class="col-md-12  nopadding img-fases"><img src="img/foto-tratamiento.jpg" alt=""></div>
         </div>
       </div>
     </div>
@@ -206,15 +206,7 @@
     <div class="copy-rights">
       <div class="container">
         <p>All Right Resreved 2015 , Resala Template</p>
-        <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">About us</a></li>
-          <li><a href="#">Services</a></li>
-          <li><a href="#">Causes</a></li>
-          <li><a href="#">Events</a></li>
-          <li><a href="#">Blog</a></li>
-          <li><a href="#">Contact us</a></li>
-        </ul>
+       
       </div>
     </div>
     <script src="js/jquery.min.js"></script>
