--- a/Atreverse/contacto.html
+++ b/Atreverse/contacto.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -63,7 +64,7 @@
             <li><a href="#"><i class="fa fa-twitter"></i></a></li>
             <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
           </ul>
-          <button data-toggle="modal" data-target="#volunteermodal" class="button btn-primary btn-x-small">VOLUNTEER NOW</button>
+          <button data-toggle="modal" data-target="#volunteermodal" class="button btn-primary btn-x-small">TRABAJA CON NOSOTROS</button>
         </div>
       </div>
     </div>
@@ -177,7 +178,7 @@
       <div class="section-title row">
         <h2>Contacto</h2>
         <div class="underlines"><span class="right"></span>
-          <div class="icon"><i class="fa fa-star"></i></div><span class="left"></span>
+          <div class="icon"></div><span class="left"></span>
         </div>
         <div class="col-md-3 col-md-offset-2 col-sm-12 text-left">
           <p class="description-text">Telefono: (011)  4791 9264 </p>
@@ -224,15 +225,7 @@
     <div class="copy-rights">
       <div class="container">
         <p>All Right Resreved 2015 , Resala Template</p>
-        <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">About us</a></li>
-          <li><a href="#">Services</a></li>
-          <li><a href="#">Causes</a></li>
-          <li><a href="#">Events</a></li>
-          <li><a href="#">Blog</a></li>
-          <li><a href="#">Contact us</a></li>
-        </ul>
+       
       </div>
     </div>
     <script src="js/jquery.min.js"></script>
