--- a/Atreverse/contacto.html
+++ b/Atreverse/contacto.html
@@ -59,36 +59,32 @@
           </ul>
         </div>
         <div class="right-content">
-          <ul class="social">
-            <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-            <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-            <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-          </ul>
-          <button data-toggle="modal" data-target="#volunteermodal" class="button btn-primary btn-x-small">TRABAJA CON NOSOTROS</button>
+          
+          <button data-toggle="modal" data-target="#volunteermodal" class="button btn-primary btn-x-small">CONTACTANOS</button>
         </div>
       </div>
     </div>
-    <div id="volunteermodal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" class="modal fade custommodal">
+     <div id="volunteermodal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" class="modal fade custommodal">
       <div role="document" class="modal-dialog">
         <div class="modal-content">
           <div class="modal-header">
             <button type="button" data-dismiss="modal" aria-label="Close" class="close"><span aria-hidden="true">×</span></button>
-            <h3 id="myModalLabel" class="modal-title">BECOME A VOLUNTEER</h3>
+            <h3 id="myModalLabel" class="modal-title">CONTACTANOS</h3>
           </div>
           <div class="modal-body clearfix">
             <div class="col-md-6">
               <div class="form-group">
-                <input type="text" placeholder="Name"><span class="icon"><i class="icon-user"></i></span>
+                <input type="text" placeholder="Nombre"><span class="icon"><i class="icon-user"></i></span>
               </div>
             </div>
             <div class="col-md-6">
               <div class="form-group">
-                <input type="text" placeholder="Project"><span class="icon"><i class="icon-pencil"></i></span>
+                <input type="text" placeholder="Asunto"><span class="icon"><i class="icon-pencil"></i></span>
               </div>
             </div>
             <div class="col-md-6">
               <div class="form-group">
-                <input type="text" placeholder="Phone Number"><span class="icon"><i class="icon-earphones"></i></span>
+                <input type="text" placeholder="Numero"><span class="icon"><i class="icon-earphones"></i></span>
               </div>
             </div>
             <div class="col-md-6">
@@ -98,12 +94,12 @@
             </div>
             <div class="col-md-12">
               <div class="form-group">
-                <textarea placeholder="aditional information"></textarea>
+                <textarea placeholder="Mensaje"></textarea>
               </div>
             </div>
           </div>
           <div class="modal-footer">
-            <button type="button" class="submit button primary">BECOME A VOLUNTEER</button>
+            <button type="button" class="submit button primary">Enviar</button>
           </div>
         </div>
       </div>
@@ -113,17 +109,12 @@
         <div class="modal-content">
           <div class="modal-header">
             <button type="button" data-dismiss="modal" aria-label="Close" class="close"><span aria-hidden="true" class="close-icon"><i class="icon-close"></i></span></button>
-            <h3 id="myModalLabel2" class="modal-title">BECOME A DONATER</h3>
+            <h3 id="myModalLabel2" class="modal-title">CONTACTANOS</h3>
           </div>
           <div class="modal-body clearfix">
             <div class="col-md-6">
               <div class="form-group">
-                <input type="text" placeholder="Enter Donation Amount"><span class="icon"><i class="icon-info"></i></span>
-              </div>
-            </div>
-            <div class="col-md-6">
-              <div class="form-group">
-                <input type="text" placeholder="Name"><span class="icon"><i class="icon-user"></i></span>
+                <input type="text" placeholder=""><span class="icon"><i class="icon-user"></i></span>
               </div>
             </div>
             <div class="col-md-6">
@@ -177,9 +168,7 @@
     <section id="contact" class="section contact-us">
       <div class="section-title row">
         <h2>Contacto</h2>
-        <div class="underlines"><span class="right"></span>
-          <div class="icon"></div><span class="left"></span>
-        </div>
+        
         <div class="col-md-3 col-md-offset-2 col-sm-12 text-left">
           <p class="description-text">Telefono: (011)  4791 9264 </p>
           <p class="description-text">Mail: atreverseinstitucional@gmail.com   </p>
