--- a/Atreverse/tratamiento.html
+++ b/Atreverse/tratamiento.html
@@ -58,12 +58,8 @@
           </ul>
         </div>
         <div class="right-content">
-          <ul class="social">
-            <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-            <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-            <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-          </ul>
-          <button data-toggle="modal" data-target="#volunteermodal" class="button btn-primary btn-x-small">VOLUNTEER NOW</button>
+          
+          <button data-toggle="modal" data-target="#volunteermodal" class="button btn-primary btn-x-small">CONTACTANOS</button>
         </div>
       </div>
     </div>
@@ -72,22 +68,22 @@
         <div class="modal-content">
           <div class="modal-header">
             <button type="button" data-dismiss="modal" aria-label="Close" class="close"><span aria-hidden="true">×</span></button>
-            <h3 id="myModalLabel" class="modal-title">BECOME A VOLUNTEER</h3>
+            <h3 id="myModalLabel" class="modal-title">CONTACTANOS</h3>
           </div>
           <div class="modal-body clearfix">
             <div class="col-md-6">
               <div class="form-group">
-                <input type="text" placeholder="Name"><span class="icon"><i class="icon-user"></i></span>
+                <input type="text" placeholder="Nombre"><span class="icon"><i class="icon-user"></i></span>
               </div>
             </div>
             <div class="col-md-6">
               <div class="form-group">
-                <input type="text" placeholder="Project"><span class="icon"><i class="icon-pencil"></i></span>
+                <input type="text" placeholder="Asunto"><span class="icon"><i class="icon-pencil"></i></span>
               </div>
             </div>
             <div class="col-md-6">
               <div class="form-group">
-                <input type="text" placeholder="Phone Number"><span class="icon"><i class="icon-earphones"></i></span>
+                <input type="text" placeholder="Numero"><span class="icon"><i class="icon-earphones"></i></span>
               </div>
             </div>
             <div class="col-md-6">
@@ -97,12 +93,12 @@
             </div>
             <div class="col-md-12">
               <div class="form-group">
-                <textarea placeholder="aditional information"></textarea>
+                <textarea placeholder="Mensaje"></textarea>
               </div>
             </div>
           </div>
           <div class="modal-footer">
-            <button type="button" class="submit button primary">BECOME A VOLUNTEER</button>
+            <button type="button" class="submit button primary">Enviar</button>
           </div>
         </div>
       </div>
