--- a/Atreverse/index.html
+++ b/Atreverse/index.html
@@ -65,7 +65,7 @@
     </div>
     <div id="volunteermodal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" class="modal fade custommodal">
       <div role="document" class="modal-dialog">
-        <div class="modal-content">
+        <form id="contact-form" class="modal-content">
           <div class="modal-header">
             <button type="button" data-dismiss="modal" aria-label="Close" class="close"><span aria-hidden="true">×</span></button>
             <h3 id="myModalLabel" class="modal-title">CONTACTANOS</h3>
@@ -73,74 +73,41 @@
           <div class="modal-body clearfix">
             <div class="col-md-6">
               <div class="form-group">
-                <input type="text" placeholder="Nombre"><span class="icon"><i class="icon-user"></i></span>
+                <input type="text" placeholder="Nombre" name="nombre"><span class="icon"><i class="icon-user"></i></span>
               </div>
             </div>
             <div class="col-md-6">
               <div class="form-group">
-                <input type="text" placeholder="Asunto"><span class="icon"><i class="icon-pencil"></i></span>
+                <input type="text" placeholder="Asunto" name="asunto"><span class="icon"><i class="icon-pencil"></i></span>
               </div>
             </div>
             <div class="col-md-6">
               <div class="form-group">
-                <input type="text" placeholder="Numero"><span class="icon"><i class="icon-earphones"></i></span>
+                <input type="text" placeholder="Telefono" name="telefono"><span class="icon"><i class="icon-earphones"></i></span>
               </div>
             </div>
             <div class="col-md-6">
               <div class="form-group">
-                <input type="text" placeholder="E-mail"><span class="icon"><i class="icon-envelope"></i></span>
+                <input type="text" placeholder="E-mail" name="email"><span class="icon"><i class="icon-envelope"></i></span>
               </div>
             </div>
             <div class="col-md-12">
               <div class="form-group">
-                <textarea placeholder="Mensaje"></textarea>
+                <textarea placeholder="Mensaje" name="mensaje"></textarea>
               </div>
             </div>
           </div>
           <div class="modal-footer">
-            <button type="button" class="submit button primary">Enviar</button>
+            <p id="btn-enviar" type="button" class="btn-envio-formulario submit button primary">Enviar</p>
           </div>
-        </div>
-      </div>
-    </div>
-    <div id="donatemodal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel2" class="modal fade custommodal">
-      <div role="document" class="modal-dialog">
-        <div class="modal-content">
-          <div class="modal-header">
-            <button type="button" data-dismiss="modal" aria-label="Close" class="close"><span aria-hidden="true" class="close-icon"><i class="icon-close"></i></span></button>
-            <h3 id="myModalLabel2" class="modal-title">CONTACTANOS</h3>
+          <img id="loader" src="img/ajax-loader.gif" alt="" hidden>
+          <div class="alert alert-success" hidden>
+            <strong>Formulario enviado correctamente!</strong>
           </div>
-          <div class="modal-body clearfix">
-            <div class="col-md-6">
-              <div class="form-group">
-                <input type="text" placeholder="Enter Donation Amount"><span class="icon"><i class="icon-info"></i></span>
-              </div>
-            </div>
-            <div class="col-md-6">
-              <div class="form-group">
-                <input type="text" placeholder="Name"><span class="icon"><i class="icon-user"></i></span>
-              </div>
-            </div>
-            <div class="col-md-6">
-              <div class="form-group">
-                <input type="text" placeholder="Phone Number"><span class="icon"><i class="icon-earphones"></i></span>
-              </div>
-            </div>
-            <div class="col-md-6">
-              <div class="form-group">
-                <input type="text" placeholder="E-mail"><span class="icon"><i class="icon-envelope"></i></span>
-              </div>
-            </div>
-            <div class="col-md-12">
-              <div class="form-group">
-                <textarea placeholder="aditional information"></textarea>
-              </div>
-            </div>
+          <div class="alert alert-danger" hidden>
+            <strong>Error al enviar el formulario.</strong> Verificar los campos completados.
           </div>
-          <div class="modal-footer">
-            <button type="button" class="submit button primary">ENVIAR</button>
-          </div>
-        </div>
+        </form>
       </div>
     </div>
     <nav class="primary-navbar">
